# groundedllm

./: .gitignore  CLAUDE.md  DEEPRESEARCH.md  README.md  docker-compose.yml  env.example  letta_mcp_config.json
caddy/: Caddyfile
context7/: Dockerfile
hayhooks/: .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  README.md  app.py  env.example  letta_setup.py  openwebui_setup.py  pyproject.toml  tavily_web_search.py
hayhooks/components/: __init__.py  brave_web_search.py  content_extraction.py  exa_web_search.py  fetcher.py  fetchers.py  github.py  google_oauth.py  image_content_extractor.py  letta_chat.py  letta_chat_reference.md  letta_setup.py  linkup_web_search.py  multi_image_content_extractor.py  notion.py  openwebui_setup.py  resolver.py  searxng_web_search.py  stackoverflow.py  stackoverflow_search.py  tavily_web_search.py  youtube_transcript.py  zotero.py
hayhooks/components/google/: google_calendar_reader.py  google_errors.py  google_mail_message_getter.py  google_mail_message_lister.py  google_mail_reader.py  google_oauth.py  google_oauth_component.py  google_youtube_transcript_reader.py
hayhooks/components/google/dataclasses/: google_calendar_models.py  google_mail_models.py
hayhooks/components/web_search/: document_extract.py  exa_web_search.py  linkup_web_search.py  searxng_web_search.py  tavily_web_search.py
hayhooks/docs/: chat-hayhooks.md
hayhooks/google_tokens/: .marker
hayhooks/letta-agent/: persona_memory.md  system_prompt.md
hayhooks/pipelines/analyze_trace/: pipeline_wrapper.py
hayhooks/pipelines/answer/: pipeline_wrapper.py
hayhooks/pipelines/chat_with_website_streaming/: pipeline_wrapper.py
hayhooks/pipelines/excerpt/: pipeline_wrapper.py
hayhooks/pipelines/extract/: pipeline_wrapper.py
hayhooks/pipelines/extract_image/: pipeline_wrapper.py
hayhooks/pipelines/get_calendar_events/: pipeline_wrapper.py
hayhooks/pipelines/get_email_message/: pipeline_wrapper.py
hayhooks/pipelines/google_auth/: pipeline_wrapper.py
hayhooks/pipelines/letta_proxy/: pipeline_wrapper.py
hayhooks/pipelines/letta_streaming/: pipeline_wrapper.py
hayhooks/pipelines/provision_letta_agent/: pipeline_wrapper.py
hayhooks/pipelines/provision_letta_pipe/: letta_pipe.py  pipeline_wrapper.py
hayhooks/pipelines/provision_search_agent/: pipeline_wrapper.py
hayhooks/pipelines/recognize_image/: pipeline_wrapper.py
hayhooks/pipelines/search/: pipeline_wrapper.py
hayhooks/pipelines/search-agent/: pipeline_wrapper.py
hayhooks/pipelines/search_by_error/: pipeline_wrapper.py
hayhooks/pipelines/search_calendar_events/: pipeline_wrapper.py
hayhooks/pipelines/search_calendars/: pipeline_wrapper.py
hayhooks/pipelines/search_emails/: pipeline_wrapper.py
hayhooks/pipelines/search_stackoverflow/: pipeline_wrapper.py
hayhooks/pipelines/search_zotero/: pipeline_wrapper.py
hayhooks/pipelines/zotero_search/: pipeline_wrapper.py
hayhooks/resources/: __init__.py  excerpt_prompt.md  excerpt_tool.py  extract_prompt.md  extract_tool.py  function_manifest.yaml  get_calendar_events_tool.py  get_email_message_tool.py  github_issue_prompt.md  google_auth_tool.py  letta_pipe.py  persona_memory.md  search_by_error_tool.py  search_calendars_tool.py  search_email_prompt.md  search_emails_tool.py  search_prompt.md  search_stackoverflow.py  search_stackoverflow_tool.py  search_tool.py  search_zotero_tool.py  stackoverflow_prompt.md  summarize_emails_tool.py  utils.py  zotero_search_tool.py
hayhooks/server/utils/: base_pipeline_wrapper.py
hayhooks/static/: index.html
hayhooks/tests/: test_example.py
hayhooks/tests/components/: test_content_extraction.py  test_github.py  test_github_repo.py  test_linkup_web_search.py  test_multi_image_content_extractor.py  test_notion.py  test_search_extraction.py  test_stackoverflow_stack_trace_analyzer.py  test_youtube_transcript.py  test_zotero_jsonpath.py
hayhooks/tests/pipelines/: test_extract_image_pipeline.py  test_zotero_jsonpath_pipeline.py
hayhooks/undeployed/direct_search/: pipeline_wrapper.py
hayhooks/undeployed/letta_chat/: letta_chat_generator.py  pipeline_wrapper.py
initializer/: Dockerfile  README.md  letta-agent.af  letta_setup.py  main.py  openwebui_setup.py  pyproject.toml
initializer/letta-agent/: persona_memory.md
initializer/letta-agent/tools/: answer.py  extract.py  search.py
letta/: Dockerfile  letta_mcp_config.json
litellm/: Dockerfile  README.md  config.yaml
mcp/: docker-compose.yml
mcp/aws-documentation-mcp-server/: Dockerfile  pyproject.toml
mcp/github-mcp-server/: Dockerfile  env.example  run.sh
mcp/letta-mcp-server/everything/: index.js
mcp/letta-mcp-server/everything/src/core/: server.js
mcp/mermaid-mcp-server/: Dockerfile
mcp/wikipedia-mcp-server/: Dockerfile
n8n-initializer/: Dockerfile  init-n8n.sh
nginx/: Dockerfile  index.html  nginx.conf
nginx/conf.d/: caching.conf
searxng/: settings.yml  uwsgi.ini
