[project]
name = "groundedllm-hayhooks"
version = "0.1.0"
description = "Hayhooks"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "gdown>=5.2.0",
    "hayhooks[mcp]>=0.6.0",
    "haystack-ai>=2.12.0",
    "httpx[http2]>=0.27.0",
    "letta-client>=0.1.91",
    "markdown-it-py>=3.0.0",
    "mdit-plain>=1.0.1",
    "openapi-llm>=0.4.2",
    "openapi3>=1.8.2",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "rich>=13.7.1",
    "tavily-python>=0.5.3",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.12",
]

[tool.setuptools]
packages = ["components", "pipelines", "resources"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[tool.ruff]
# Enable rules that check for unused imports (F401)
lint.select = ["F401"]  # Or add F401 to your existing selection
select = ["E", "F", "I", "D"]  # Add "D" for docstring checks

# To automatically remove unused imports when fixing
fix = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.12"
# https://mypy.readthedocs.io/en/stable/existing_code.html
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
