[project]
name = "groundedllm-hayhooks"
version = "0.1.0"
description = "Hayhooks"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "exa-py>=1.12.1",
    "gdown>=5.2.0",
    "hayhooks[mcp]>=0.8.0",
    "haystack-ai>=2.13.2",
    "httpx[http2]>=0.27.0",
    "letta-client>=0.1.137",
    "linkup-sdk>=0.2.4",
    "markdown-it-py>=3.0.0",
    "mcp-haystack>=0.1.0",
    "mdit-plain>=1.0.1",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "rich>=14.0.0",
    "tavily-python>=0.7.1",
    "trafilatura>=2.0.0",
]

[tool.setuptools]
packages = ["components", "pipelines", "resources"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "pytest>=8.3.5",
    "pytest-mock>=3.12"
]

[tool.ruff]
# https://docs.astral.sh/ruff/linter/#rule-selection
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    #"B",  # flake8-bugbear
    #"SIM", # flake8-simplify
]
line-length = 250

# To automatically remove unused imports when fixing
fix = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.12"
# https://mypy.readthedocs.io/en/stable/existing_code.html
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
