[project]
name = "aws-documentation-mcp-server"
version = "0.1.0"
description = "A docker package of the mcp server with all dependencies frozen"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "awslabs-aws-documentation-mcp-server>=0.0.81004",
    "mcp-proxy>=0.5.1",
    "pydantic-core>=2.33.1",
]
